--- a/public/css/page.css
+++ b/public/css/page.css
@@ -101,6 +101,750 @@ body {
   padding: 0 12px;
 }
 
+/* HEADER */
+
+#header {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  padding: 70px 0 60px 0;
+}
+
+#header h1 {
+  margin: 0 0 10px 0;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 56px;
+  color: var(--primary-color-1);
+}
+
+#header h2 {
+  color: var(--primary-color-3);
+  margin-bottom: 50px;
+  font-size: 14px;
+}
+
+#header .download-btn {
+  font-weight: 500;
+  font-size: 15px;
+  border: 0;
+  padding: 10px 24px 10px 24px;
+  border-radius: 3px;
+  color: #fff;
+  background-color: var(--primary-color-2);
+  border-radius: 30px;
+}
+
+#header .download-btn:hover {
+  /* background: #5777ba; */
+}
+
+#header .download-btn i {
+  font-size: 20px;
+  position: absolute;
+  left: 18px;
+  top: 8.5px;
+}
+
+#header .download-btn+.download-btn {
+  margin-left: 20px;
+}
+
+@media (max-width: 991px) {
+  #header {
+    text-align: center;
+  }
+
+  #header .download-btn+.download-btn {
+    margin: 0 10px;
+  }
+
+  #header .header-img {
+    text-align: center;
+  }
+
+  #header .header-img img {
+    width: 60%;
+  }
+}
+
+@media (max-width: 768px) {
+  #header h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+
+  #header h2 {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 30px;
+  }
+
+  #header .header-img img {
+    width: 70%;
+  }
+}
+
+@media (max-width: 575px) {
+  #header .header-img img {
+    width: 80%;
+  }
+}
+
+
+/* SERVICES */
+
+#services {
+  height: 160px;
+  background-color: var(--primary-color-1);
+}
+
+#services h2{
+  color: #ffffff;
+  margin: 0;
+}
+
+@media (max-width: 991px) {
+#services {
+height: 400px;
+}
+
+.feature{
+  margin: 20px 0;
+}
+#header .download-btn+.download-btn {
+margin: 0 10px;
+}
+
+
+}
+
+.icon-button {
+  background-color: #ffffff;
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+/* FEATURES */
+
+#features {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  padding: 70px 0 50px 0;
+  background-color: #eff2f8;
+}
+
+#features h1 {
+  margin: 0 0 10px 0;
+  font-size: 38px;
+  font-weight: 500;
+  line-height: 45.6px;
+  color: var(--primary-color-1);
+}
+
+#features h2 {
+  color: var(--primary-color-3);
+  margin-bottom: 20px;
+  font-size: 14px;
+}
+
+#features h3 {
+  color: var(--primary-color-1);
+  margin-bottom: 0px;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+#features .download-btn {
+  font-weight: 500;
+  font-size: 15px;
+  border: 0;
+  padding: 10px 24px 10px 24px;
+  border-radius: 3px;
+  color: #fff;
+  background-color: var(--primary-color-2);
+  border-radius: 30px;
+}
+
+#features .download-btn i {
+  font-size: 20px;
+  position: absolute;
+  left: 18px;
+  top: 8.5px;
+}
+
+
+#features ul {
+  list-style: none;
+  padding: 0;
+  /* Remove the marker */
+}
+
+ul li {
+  display: flex;
+  text-align: center;
+  margin: 0;
+  /* Center-align list items */
+}
+
+li {
+  padding: 5px 0px;
+}
+
+#features .icon-button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: var(--primary-color-1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-button img {
+  max-width: 100%;
+  /* Adjust image size inside the icon button */
+  max-height: 100%;
+  /* Adjust image size inside the icon button */
+}
+
+
+
+
+
+#features .download-btn+.download-btn {
+  margin-left: 20px;
+}
+
+@media (max-width: 991px) {
+  #features {
+      text-align: center;
+  }
+
+  #features .download-btn+.download-btn {
+      margin: 0 10px;
+  }
+
+  #features .features-img {
+      text-align: center;
+  }
+
+  #features .features-img img {
+      width: 60%;
+  }
+}
+
+@media (max-width: 768px) {
+  #features h1 {
+      font-size: 28px;
+      line-height: 36px;
+  }
+
+  #features h2 {
+      font-size: 18px;
+      line-height: 24px;
+      margin-bottom: 30px;
+  }
+
+  #features .features-img img {
+      width: 70%;
+  }
+}
+
+@media (max-width: 575px) {
+  #features .features-img img {
+      width: 80%;
+  }
+}
+
+
+/* NEWS */
+
+#news {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  padding: 70px 0 50px 0;
+}
+
+#news h1 {
+  margin: 0 0 10px 0;
+  font-size: 38px;
+  font-weight: 500;
+  line-height: 45.6px;
+  color: var(--primary-color-1);
+}
+
+#news h2 {
+  color: var(--primary-color-3);
+  margin-bottom: 20px;
+  font-size: 14px;
+  margin: 0;
+}
+
+#news h3 {
+  color: var(--primary-color-1);
+  margin-bottom: 0px;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+#news .category-btn {
+  width: 88px;
+  height: 28px;
+  color: #fff;
+  background-color: var(--primary-color-2);
+  border: 0;
+  border-radius: 50px;
+  width: auto;
+}
+
+.news-title {
+  text-align: center;
+}
+
+.news-title h2 {
+  color: var(--primary-color-2) !important;
+  font-size: 36px !important;
+}
+
+@media (max-width: 991px) {
+  #news {
+      text-align: center;
+  }
+
+  #news .download-btn+.download-btn {
+      margin: 0 10px;
+  }
+
+  #news .news-img {
+      text-align: center;
+  }
+
+  #news .news-img img {
+      width: 60%;
+  }
+}
+
+@media (max-width: 768px) {
+  #news h1 {
+      font-size: 28px;
+      line-height: 36px;
+  }
+
+  #news h2 {
+      font-size: 18px;
+      line-height: 24px;
+      margin-bottom: 30px;
+  }
+
+  #news .news-img img {
+      width: 70%;
+  }
+}
+
+@media (max-width: 575px) {
+  #news .news-img img {
+      width: 80%;
+  }
+}
+
+.news-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.news-container-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  margin: 0 16px;
+  padding: 20px;
+}
+
+.news-container-typography {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  margin: 0 16px;
+  padding: 20px;
+}
+
+.news-container button {
+  width: 88px;
+  height: 28px;
+  color: #fff;
+  background-color: var(--primary-color-2);
+  border: 0;
+  border-radius: 50px;
+}
+
+.news-container-heading {
+  color: var(--primary-color-1);
+  font-family: Plus Jakarta Sans;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+  text-align: left;
+}
+
+.news-container-text {
+  color: var(--primary-color-3);
+  font-family: Plus Jakarta Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 19px;
+  text-align: left;
+}
+
+.news-container-action {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 7px;
+  /* align-self: stretch; */
+  margin: 0 16px;
+  padding: 0 20px;
+}
+
+.news-container-action p {
+  color: var(--primary-color-2);
+  font-family: Plus Jakarta Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
+  /* 233.333% */
+  text-decoration-line: underline;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+
+/* NEWSLETTER */
+
+#newsletter {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  padding: 70px 0 60px 0;
+}
+
+#newsletter h1 {
+  margin: 0 0 10px 0;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 56px;
+  color: var(--primary-color-1);
+}
+
+#newsletter h2 {
+  color: var(--primary-color-3);
+  margin-bottom: 20px;
+  font-size: 14px;
+}
+
+#newsletter h3 {
+  color: var(--primary-color-1);
+  margin-bottom: 0px;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+#newsletter img {
+  position: relative;
+  right: 0;
+  width: 475px;
+  height: 573px;
+}
+
+.news-details {
+  top: 223px;
+  right: 0;
+  width: 270px;
+  height: 260px;
+  background-color: #ffffff;
+  border-radius: 5.75px;
+  padding: 20px;
+  box-shadow: -24.2662296295166px 41.83832931518555px 100.41197204589844px 0px #0000001A;
+
+}
+
+.news-details h3 {
+  font-size: 16px !important;
+  font-weight: 700 !important;
+  line-height: 26.92px !important;
+  color: var(--primary-color-3) !important;
+  margin-bottom: 16px !important;
+}
+
+.news-details h1 {
+  font-size: 30px !important;
+  font-weight: 800 !important;
+  line-height: 26.92px !important;
+  color: var(--primary-color-2) !important;
+  padding: 8px 0;
+}
+
+.news-details h1 span {
+  font-size: 16px !important;
+  font-weight: 800 !important;
+  line-height: 26.92px !important;
+  color: var(--primary-color-2) !important;
+}
+
+
+@media (max-width: 991px) {
+  #newsletter {
+      text-align: center;
+  }
+
+  #newsletter .newsletter-img {
+      text-align: center;
+  }
+
+  #newsletter .newsletter-img img {
+      width: 60%;
+  }
+}
+
+@media (max-width: 768px) {
+  #newsletter h1 {
+      font-size: 28px;
+      line-height: 36px;
+  }
+
+  #newsletter h2 {
+      font-size: 18px;
+      line-height: 24px;
+      margin-bottom: 30px;
+  }
+
+  #newsletter .newsletter-img img {
+      width: 70%;
+  }
+}
+
+@media (max-width: 575px) {
+  #newsletter .newsletter-img img {
+      width: 80%;
+  }
+}
+
+.loginInput {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  margin-top: 16px;
+}
+
+.fullname,
+.email {
+  width: 100%;
+  
+  padding: 16px;
+  padding-left: 50px;
+  border-radius: 5px;
+  border: 1px solid var(--primary-color-1);
+}
+
+.icon-input {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.icon-input i {
+ position: absolute;
+ margin: 0 10px;
+ margin-top: 5px;
+}
+
+.loginInput button {
+  display: flex;
+  width: 100%;
+  padding: 18px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border: 0;
+  flex-shrink: 0;
+  border-radius: 50px;
+  background: var(--primary-color-1);
+  color: #FFF;
+  /* font-family: Plus Jakarta Sans; */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+
+/* COUNTDOWN */
+.countdown-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  padding: 80px 0px;
+}
+
+#countdown {
+  position: relative;
+  width: 100%;
+  padding: 0 0 160px;
+
+}
+
+.black-background {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background-color: var(--primary-color-3);
+}
+
+/* You can style your countdown timer here */
+.countdown-timer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #FFFFFF;
+  background-image: url('/images/countdown.png');
+  background-size: cover;
+  background-position: center;
+  padding: 20px;
+  text-align: center;
+  width: 100%;
+  height: 90%;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.countdown-timer h2 {
+  font-size: 8rem;
+  font-weight: 700;
+}
+
+#circles {
+  position: absolute;
+  left: 0;
+  right: 0;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  bottom: -80px;
+}
+
+.works_section {
+  float: right;
+  width: 200px;
+  height: 200px;
+  border-radius: 101px;
+  display: block;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+}
+
+.works_section h2 {
+  font-size: 4rem;
+  margin-bottom: 0;
+}
+
+.works_section p {
+  font-size: 16px;
+}
+
+#upload_circle {
+  background-color: #2D9CDB;
+  z-index: 0;
+}
+
+#team_circle {
+  background-color: #2F80ED;
+  z-index: 1;
+  left: -21px;
+}
+
+#development_circle {
+  background-color: #25aed2;
+  z-index: 1;
+  left: -42px;
+}
+
+@media (max-width: 1100px) {
+  .countdown-timer h2 {
+      font-size: 6rem;
+      font-weight: 700;
+  }
+}
+
+@media (max-width: 860px) {
+  .countdown-timer h2 {
+      font-size: 4rem;
+      font-weight: 700;
+  }
+
+  #circles {
+
+      bottom: -60px;
+  }
+
+  .works_section {
+      width: 150px;
+      height: 150px;
+
+  }
+}
+
+@media (max-width: 580px) {
+  .countdown-timer h2 {
+      font-size: 3rem;
+      font-weight: 700;
+  }
+
+  #circles {
+
+      bottom: -40px;
+  }
+
+  .works_section {
+      width: 100px;
+      height: 100px;
+
+  }
+
+  .works_section h2 {
+      font-size: 2rem;
+  }
+
+  .works_section p {
+      font-size: 14px;
+  }
+
+}
+
 #footer {
   padding-top: 30px;
   color: #fff;
